Fix navbar buttons on mobile size

--- a/src/App.css
+++ b/src/App.css
@@ -337,6 +337,10 @@ footer {
     .errorContainer  .errorImage {
         width: 50vw;
     }
+
+    .navbar-nav.nav-pills .nav-link.active {
+        background-color: rgba(0, 0, 0, 0);
+    }
 }
 
 @media only screen and (max-width: 385px){
